--- a/about.html
+++ b/about.html
@@ -7,13 +7,6 @@
     <title>WMI GHANA Website</title>
   </head>
   <body>
-    <main>
-        <h1>Welcome to WMI GHANA Website</h1>  
-        <p>This new website which is hosted on GitHub Pages!</p>
-    </main>
-  </body>
-  <footer>
-    Copyrigh @ All right reserved, By <span><a href="#">WMI GHANA</a></span>
-  </footer>
- </html>
-  
+    <h2>Welcome</h2>h2>
+    </body>
+</html>
